--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -1125,7 +1125,7 @@ ul input.session-name {
     margin-bottom: 20px;
 }
 
-#email-templates li span {
+#email-templates li div.email-template-description {
     display: block;
     margin-left: 50px;
     margin-top: 10px;
@@ -1246,6 +1246,10 @@ table.payment-statistics tbody tr:hover {
 
 .bold {
     font-weight: bold;
+}
+
+.italic {
+	font-style: italic;
 }
 
 .red {
