Email codes can now be toggled on/off in email templates

--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -1176,6 +1176,12 @@ table.payment-statistics tbody tr:hover {
     cursor: default;
 }
 
+/* EMAIL TEMPLATES */
+
+#email-codes {
+    margin-bottom: 20px;
+}
+
 /* LOGIN */
 
 #login {
