Users auto complete should also show the user id and have a minimum width

--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -1202,6 +1202,7 @@ table.payment-statistics tbody tr:hover {
 /* AUTOCOMPLETE */
 
 .ui-autocomplete {
+    min-width: 300px;
     max-height: 100px;
     overflow-y: auto;
     overflow-x: hidden;
