--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -863,6 +863,10 @@ span.help-text {
     margin: 5px 0;
 }
 
+#resend-registration-email-conainer {
+    margin-top: 30px;
+}
+
 /* ROOMS */
 
 #room-equipment .column {
