--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -1169,6 +1169,15 @@ ul input.session-name {
 
 /* PAYMENTS */
 
+ul.payments-filters {
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+ul.payments-filters li {
+    margin-bottom: 5px;
+}
+
 .payment-statistics td {
     width: 12%;
     text-align: center;
